--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "cherio": "^1.0.0-rc.2",
+    "dropbox": "^10.24.0",
     "pg": "^8.7.1",
     "telegraf": "^4.5.2"
   },
